@@ -431,7 +431,7 @@ public abstract class QueryTest extends AbstractReaderTest {
                     charValue = 'E';
                 }
                 PrimitiveTypes primitiveObject = new PrimitiveTypes(
-                    (long)i, bFlag, new Boolean(bFlag), (byte)i, new Byte((byte)i),
+                    (long)i, bFlag, Boolean.valueOf(bFlag), (byte)i, new Byte((byte)i),
                     (short)i, Short.valueOf((short)i), (int) i, new Integer(i),
                     (long)i, Long.valueOf(i), (float)i, Float.valueOf((float)i),
                     (double)i, Double.valueOf(i), charValue, Character.valueOf(charValue),
